--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 <img src="./images/logo2.png" alt="">
                             </a>
                         </div>
-                        <p>praesentium, quia quas. Vitae recusandae mollitia laudantium voluptas totam repellat iure, possimus fugit. Dolorum illum vel maiores at iste, quibusdam aut laudantium vitae voluptate adipisci, dicta obcaecati magni quidem voluptatum qui exercitationem tempora expedita quia atque. Culpa, minus voluptas.</p>
+                        <p>vitae voluptate adipisci, dicta obcaecati magni quidem voluptatum qui exercitationem tempora expedita quia atque. Culpa, minus voluptas.</p>
                     </div>
                     <div class="single-footer-button">
                         <h4>About us</h4>
